--- a/EduCore/EduCore/Properties/launchSettings.json
+++ b/EduCore/EduCore/Properties/launchSettings.json
@@ -17,7 +17,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7276;http://localhost:5121",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "quien_soy": "una variable de ambiente"
       }
     }
   }
